--- a/templates/common/macro/member.html.twig
+++ b/templates/common/macro/member.html.twig
@@ -1,4 +1,4 @@
-a{% macro member_badge_status(member) %}
+{% macro member_badge_status(member) %}
     {% if member.isActive %}
         <span class="badge text-bg-success">{{ 'mp_status_list.active'|trans }}</span>
     {% else %}
