--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand mb-4">
+<nav class="navbar navbar-expand-lg mb-4">
     <div class="container">
         <div class="w-100 d-flex justify-content-between">
             <div>
