--- a/templates/hp.html.twig
+++ b/templates/hp.html.twig
@@ -12,10 +12,10 @@
     <section class="presentation-section my-5">
         <div class="container">
             <div class="row">
-                <div class="col-6 d-flex justify-content-end" data-aos="fade-right">
+                <div class="col-12 col-lg-6 d-flex justify-content-end" data-aos="fade-right">
                     <img src="{{ asset('build/images/hp/deal.webp') }}" alt="" style="max-width: 400px" class="pe-5">
                 </div>
-                <div class="col-6" data-aos="fade-left">
+                <div class="col-12 col-lg-6" data-aos="fade-left">
                     <h2 class="h4">How close the votes of MPs are</h2>
                     <div class="d-flex gap-3">
                         <div>{{ icon.pie() }}</div>
@@ -36,10 +36,10 @@
     <section class="presentation-section pt-9 mb-10 bg-light-gradient">
         <div class="container">
             <div class="row">
-                <div class="col-6 d-flex justify-content-end" data-aos="fade-right">
-                    <img src="{{ asset('build/images/hp/Sans titre.webp') }}" alt="" style="max-width: 500px; height: auto; object-fit: contain" class="pe-5">
+                <div class="col-12 col-lg-6 d-flex justify-content-end" data-aos="fade-right">
+                    <img src="{{ asset('build/images/hp/matrix.webp') }}" alt="" style="max-width: 500px; height: auto; object-fit: contain" class="pe-5">
                 </div>
-                <div class="col-6" data-aos="fade-left">
+                <div class="col-12 col-lg-6" data-aos="fade-left">
                     <h2 class="h4">A correlation matrix between MPs</h2>
                     <p class="text-muted">Very useful for getting an quick overview!</p>
                     <div class="d-flex gap-3 mt-4">
@@ -70,10 +70,10 @@
     <section class="presentation-section my-10">
         <div class="container">
             <div class="row">
-                <div class="col-6 d-flex justify-content-end" data-aos="fade-right">
+                <div class="col-12 col-lg-6 d-flex justify-content-end" data-aos="fade-right">
                     <img src="{{ asset('build/images/hp/map.webp') }}" alt="" style="max-width: 500px; height: auto; object-fit: contain" class="pe-5">
                 </div>
-                <div class="col-6" data-aos="fade-left">
+                <div class="col-12 col-lg-6" data-aos="fade-left">
                     <h2 class="h4">Overview of MP absenteeism</h2>
                     <div class="d-flex gap-3 mt-4">
                         <div>{{ icon.europe() }}</div>
@@ -93,10 +93,10 @@
     <section class="presentation-section my-10">
         <div class="container">
             <div class="row">
-                <div class="col-6 d-flex justify-content-end" data-aos="fade-right">
+                <div class="col-12 col-lg-6 d-flex justify-content-end" data-aos="fade-right">
                     <img src="{{ asset('build/images/hp/dotaverage.webp') }}" alt="" style="" class="pe-5">
                 </div>
-                <div class="col-6" data-aos="fade-left">
+                <div class="col-12 col-lg-6" data-aos="fade-left">
                     <h2 class="h4">A detailed view of absenteeism by country</h2>
                     <div class="d-flex gap-3 mt-4">
                         <div>{{ icon.dotchart() }}</div>
